--- a/src/pages/InfinitySaga/InfinitySaga.css
+++ b/src/pages/InfinitySaga/InfinitySaga.css
@@ -4,13 +4,13 @@
 
 .phase1 {
     color: white;
-    background-color: blue;
+    /* background-color: blue; */
     border-color: white;
 }
 
 .phase2 {
     color: white;
-    background-color: #9e0cab;
+    /* background-color: #9e0cab; */
     border-color: white;
 }
 
