--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -20,11 +20,24 @@ body {
     height: 45%;
     position: fixed;
     z-index: -1;
+    padding-bottom: 10px;
+    display: flex;
+    object-fit: contain;
+    margin-bottom: 10px;
 }
 
 .text {
     font-size: 30px;
     color: #df0000;
+    text-align: center;
+    Margin: 25px 0 25px 0;
+    font-family: "Bebas Neue", cursive;
+    /* font-family: "Audiowide", sans-serif; */
+}
+
+.black-text {
+    font-size: 30px;
+    color: black;
     text-align: center;
     Margin: 25px 0 25px 0;
     font-family: "Bebas Neue", cursive;
@@ -96,21 +109,26 @@ body {
 }
 
 .home-cards {
+    position: relative;
     text-align: center;
     align-item: center;
+    margin: 10px;
+    display: flex;
+    flex-flow: column;
+    padding-top: 4rem;
 }
 
 /* .ImgButton {
     width: 18rem;
     /* margin: 20px; */
-    /* border-radius: 20px;
+
+/* border-radius: 20px;
     1-webkit-border-radius: 50%;
     -moz-border-radius: 20px;
     -ms-border-radius: 20px;
     -o-border-radius: 20px;
     -webkit-border-radius: 20px; 
 } */
-
 
 .img {
     webkit-border-radius: 15px;
@@ -195,8 +213,7 @@ body {
 
 .footer {
     background-color: #df0000;
-    left: 0;
-    top: auto;
     bottom: 0;
     width: 100%;
+    position: bottom;
 }
