--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -217,3 +217,16 @@ body {
     width: 100%;
     position: bottom;
 }
+
+.socials-container {
+    display: flex;
+
+    justify-content: center;
+}
+
+.socials {
+    margin: 3px 7px 15px 7px;
+    flex-direction: row;
+    align-items: center;
+    color: white;
+}
