--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("../../Images/webb.png");
+    /* background-image: url("../../Images/webb.png"); */
     /* min-height: 500px; */
     background-attachment: fixed;
     background-position: center;
